# fserv

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
src/: cli_args.rs  main.rs  server.rs
